--- a/portfolio/src/app/home/home.component.css
+++ b/portfolio/src/app/home/home.component.css
@@ -202,21 +202,6 @@ h3 {
     margin-bottom: 20px;
 }
 
-/* Projects section styles */
-.projects {
-    padding: 100px 0;
-    text-align: center;
-}
-
-.project {
-    text-align: left;
-    margin-bottom: 30px;
-    padding: 20px;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-}
-
 /* About Me section styles */
 .about-me {
     padding: 100px 0;
