--- a/portfolio/src/app/projects/projects.component.css
+++ b/portfolio/src/app/projects/projects.component.css
@@ -11,7 +11,6 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
-    padding: 20px;
     border: 1px solid #ddd;
     border-radius: 10px;
     background-color: #f5f5f5;
@@ -20,7 +19,7 @@
 }
 
 .project-item img {
-    max-width: 100%;
+    max-width: 70%;
     max-height: 60vh; /* Set maximum image height to 60% of viewport height */
     border-radius: 10px;
     margin-bottom: 10px;
@@ -36,4 +35,21 @@
     margin: 0;
     font-size: 1.2rem;
     color: #777;
+}
+
+
+
+/* Projects section styles */
+.projects {
+    /* padding: 100px 0; */
+    text-align: center;
+}
+
+.project {
+    /* text-align: left; */
+    margin-bottom: 30px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
